--- a/src/Example.Crawler.Akka/Example.Crawler.Akka.csproj
+++ b/src/Example.Crawler.Akka/Example.Crawler.Akka.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.3.5" />
+    <PackageReference Include="Akka.Cluster" Version="1.3.5" />
+    <PackageReference Include="Akka.Cluster.Tools" Version="1.3.5" />
+    <PackageReference Include="Akka.Remote" Version="1.3.5" />
+  </ItemGroup>
+
 </Project>
