--- a/test/Example.Tests/Example.Tests.csproj
+++ b/test/Example.Tests/Example.Tests.csproj
@@ -15,4 +15,8 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Example.Crawler.Domain\Example.Crawler.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
