--- a/src/Example.Crawler.Akka/Example.Crawler.Akka.csproj
+++ b/src/Example.Crawler.Akka/Example.Crawler.Akka.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Akka.Remote" Version="1.3.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Example.Crawler.Domain\Example.Crawler.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
