--- a/test/Example.Tests/Example.Tests.csproj
+++ b/test/Example.Tests/Example.Tests.csproj
@@ -10,12 +10,14 @@
     <PackageReference Include="Akka.TestKit" Version="1.3.5" />
     <PackageReference Include="Akka.TestKit.Xunit2" Version="1.3.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Moq" Version="4.8.2" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Example.Crawler.Akka\Example.Crawler.Akka.csproj" />
     <ProjectReference Include="..\..\src\Example.Crawler.Domain\Example.Crawler.Domain.csproj" />
   </ItemGroup>
 
